qt/gen_qtextedit.h

typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QMimeData QMimeData;
typedef struct QMouseEvent QMouseEvent;
typedef struct QObject QObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QRegExp QRegExp;
typedef struct QRegularExpression QRegularExpression;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTextCursor QTextCursor;
typedef struct QTextEdit QTextEdit;
typedef struct QTimerEvent QTimerEvent;
typedef struct QUrl QUrl;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
struct miqt_string QTextEdit_tr2(const char* s, const char* c);
struct miqt_string QTextEdit_tr3(const char* s, const char* c, int n);
struct miqt_string QTextEdit_trUtf82(const char* s, const char* c);
struct miqt_string QTextEdit_trUtf83(const char* s, const char* c, int n);
bool QTextEdit_find22(QTextEdit* self, struct miqt_string exp, int options);
bool QTextEdit_find23(QTextEdit* self, QRegExp* exp, int options);
bool QTextEdit_find24(QTextEdit* self, QRegularExpression* exp, int options);
struct miqt_string QTextEdit_toMarkdown1(const QTextEdit* self, int features);
void QTextEdit_moveCursor2(QTextEdit* self, int operation, int mode);
void QTextEdit_zoomIn1(QTextEdit* self, int range);
void QTextEdit_zoomOut1(QTextEdit* self, int range);
bool QTextEdit_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTextEdit_virtualbase_metaObject(const void* self);
bool QTextEdit_override_virtual_metacast(void* self, intptr_t slot);
void* QTextEdit_virtualbase_metacast(void* self, const char* param1);
bool QTextEdit_override_virtual_metacall(void* self, intptr_t slot);
int QTextEdit_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTextEdit_override_virtual_loadResource(void* self, intptr_t slot);
QVariant* QTextEdit_virtualbase_loadResource(void* self, int type, QUrl* name);
bool QTextEdit_override_virtual_inputMethodQuery(void* self, intptr_t slot);
QVariant* QTextEdit_virtualbase_inputMethodQuery(const void* self, int property);
bool QTextEdit_override_virtual_event(void* self, intptr_t slot);
bool QTextEdit_virtualbase_event(void* self, QEvent* e);
bool QTextEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QTextEdit_override_virtual_keyPressEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_keyPressEvent(void* self, QKeyEvent* e);
bool QTextEdit_override_virtual_keyReleaseEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_keyReleaseEvent(void* self, QKeyEvent* e);
bool QTextEdit_override_virtual_resizeEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QTextEdit_override_virtual_paintEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QTextEdit_override_virtual_mousePressEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_mousePressEvent(void* self, QMouseEvent* e);
bool QTextEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QTextEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QTextEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* e);
bool QTextEdit_override_virtual_focusNextPrevChild(void* self, intptr_t slot);
bool QTextEdit_virtualbase_focusNextPrevChild(void* self, bool next);
bool QTextEdit_override_virtual_contextMenuEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_contextMenuEvent(void* self, QContextMenuEvent* e);
bool QTextEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* e);
bool QTextEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QTextEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QTextEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_dropEvent(void* self, QDropEvent* e);
bool QTextEdit_override_virtual_focusInEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_focusInEvent(void* self, QFocusEvent* e);
bool QTextEdit_override_virtual_focusOutEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_focusOutEvent(void* self, QFocusEvent* e);
bool QTextEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_showEvent(void* self, QShowEvent* param1);
bool QTextEdit_override_virtual_changeEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_changeEvent(void* self, QEvent* e);
bool QTextEdit_override_virtual_wheelEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QTextEdit_override_virtual_createMimeDataFromSelection(void* self, intptr_t slot);
QMimeData* QTextEdit_virtualbase_createMimeDataFromSelection(const void* self);
bool QTextEdit_override_virtual_canInsertFromMimeData(void* self, intptr_t slot);
bool QTextEdit_virtualbase_canInsertFromMimeData(const void* self, QMimeData* source);
bool QTextEdit_override_virtual_insertFromMimeData(void* self, intptr_t slot);
void QTextEdit_virtualbase_insertFromMimeData(void* self, QMimeData* source);
bool QTextEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QTextEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QTextEdit_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QTextEdit_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QTextEdit_override_virtual_doSetTextCursor(void* self, intptr_t slot);
void QTextEdit_virtualbase_doSetTextCursor(void* self, QTextCursor* cursor);
bool QTextEdit_override_virtual_minimumSizeHint(void* self, intptr_t slot);
QSize* QTextEdit_virtualbase_minimumSizeHint(const void* self);
bool QTextEdit_override_virtual_sizeHint(void* self, intptr_t slot);
QSize* QTextEdit_virtualbase_sizeHint(const void* self);
bool QTextEdit_override_virtual_setupViewport(void* self, intptr_t slot);
void QTextEdit_virtualbase_setupViewport(void* self, QWidget* viewport);
bool QTextEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTextEdit_virtualbase_eventFilter(void* self, QObject* param1, QEvent* param2);
bool QTextEdit_override_virtual_viewportEvent(void* self, intptr_t slot);
bool QTextEdit_virtualbase_viewportEvent(void* self, QEvent* param1);
bool QTextEdit_override_virtual_viewportSizeHint(void* self, intptr_t slot);
QSize* QTextEdit_virtualbase_viewportSizeHint(const void* self);
bool QTextEdit_override_virtual_devType(void* self, intptr_t slot);
int QTextEdit_virtualbase_devType(const void* self);
bool QTextEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QTextEdit_virtualbase_setVisible(void* self, bool visible);
bool QTextEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QTextEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QTextEdit_virtualbase_hasHeightForWidth(const void* self);