qt/gen_qtextedit.nim

proc fcQTextEdit_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextEdit_tr2".}
proc fcQTextEdit_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextEdit_tr3".}
proc fcQTextEdit_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTextEdit_trUtf82".}
proc fcQTextEdit_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTextEdit_trUtf83".}
proc fcQTextEdit_find22(self: pointer, exp: struct_miqt_string, options: cint): bool {.importc: "QTextEdit_find22".}
proc fcQTextEdit_find23(self: pointer, exp: pointer, options: cint): bool {.importc: "QTextEdit_find23".}
proc fcQTextEdit_find24(self: pointer, exp: pointer, options: cint): bool {.importc: "QTextEdit_find24".}
proc fcQTextEdit_toMarkdown1(self: pointer, features: cint): struct_miqt_string {.importc: "QTextEdit_toMarkdown1".}
proc fcQTextEdit_moveCursor2(self: pointer, operation: cint, mode: cint): void {.importc: "QTextEdit_moveCursor2".}
proc fcQTextEdit_zoomIn1(self: pointer, range: cint): void {.importc: "QTextEdit_zoomIn1".}
proc fcQTextEdit_zoomOut1(self: pointer, range: cint): void {.importc: "QTextEdit_zoomOut1".}
proc fQTextEdit_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_metaObject".}
proc fcQTextEdit_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_metaObject".}
proc fQTextEdit_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTextEdit_virtualbase_metacast".}
proc fcQTextEdit_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_metacast".}
proc fQTextEdit_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTextEdit_virtualbase_metacall".}
proc fcQTextEdit_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_metacall".}
proc fQTextEdit_virtualbase_loadResource(self: pointer, typeVal: cint, name: pointer): pointer{.importc: "QTextEdit_virtualbase_loadResource".}
proc fcQTextEdit_override_virtual_loadResource(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_loadResource".}
proc fQTextEdit_virtualbase_inputMethodQuery(self: pointer, property: cint): pointer{.importc: "QTextEdit_virtualbase_inputMethodQuery".}
proc fcQTextEdit_override_virtual_inputMethodQuery(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_inputMethodQuery".}
proc fQTextEdit_virtualbase_event(self: pointer, e: pointer): bool{.importc: "QTextEdit_virtualbase_event".}
proc fcQTextEdit_override_virtual_event(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_event".}
proc fQTextEdit_virtualbase_timerEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_timerEvent".}
proc fcQTextEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_timerEvent".}
proc fQTextEdit_virtualbase_keyPressEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_keyPressEvent".}
proc fcQTextEdit_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_keyPressEvent".}
proc fQTextEdit_virtualbase_keyReleaseEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_keyReleaseEvent".}
proc fcQTextEdit_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_keyReleaseEvent".}
proc fQTextEdit_virtualbase_resizeEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_resizeEvent".}
proc fcQTextEdit_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_resizeEvent".}
proc fQTextEdit_virtualbase_paintEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_paintEvent".}
proc fcQTextEdit_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_paintEvent".}
proc fQTextEdit_virtualbase_mousePressEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_mousePressEvent".}
proc fcQTextEdit_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_mousePressEvent".}
proc fQTextEdit_virtualbase_mouseMoveEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_mouseMoveEvent".}
proc fcQTextEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_mouseMoveEvent".}
proc fQTextEdit_virtualbase_mouseReleaseEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_mouseReleaseEvent".}
proc fcQTextEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_mouseReleaseEvent".}
proc fQTextEdit_virtualbase_mouseDoubleClickEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_mouseDoubleClickEvent".}
proc fcQTextEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_mouseDoubleClickEvent".}
proc fQTextEdit_virtualbase_focusNextPrevChild(self: pointer, next: bool): bool{.importc: "QTextEdit_virtualbase_focusNextPrevChild".}
proc fcQTextEdit_override_virtual_focusNextPrevChild(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_focusNextPrevChild".}
proc fQTextEdit_virtualbase_contextMenuEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_contextMenuEvent".}
proc fcQTextEdit_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_contextMenuEvent".}
proc fQTextEdit_virtualbase_dragEnterEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_dragEnterEvent".}
proc fcQTextEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_dragEnterEvent".}
proc fQTextEdit_virtualbase_dragLeaveEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_dragLeaveEvent".}
proc fcQTextEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_dragLeaveEvent".}
proc fQTextEdit_virtualbase_dragMoveEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_dragMoveEvent".}
proc fcQTextEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_dragMoveEvent".}
proc fQTextEdit_virtualbase_dropEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_dropEvent".}
proc fcQTextEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_dropEvent".}
proc fQTextEdit_virtualbase_focusInEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_focusInEvent".}
proc fcQTextEdit_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_focusInEvent".}
proc fQTextEdit_virtualbase_focusOutEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_focusOutEvent".}
proc fcQTextEdit_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_focusOutEvent".}
proc fQTextEdit_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QTextEdit_virtualbase_showEvent".}
proc fcQTextEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_showEvent".}
proc fQTextEdit_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_changeEvent".}
proc fcQTextEdit_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_changeEvent".}
proc fQTextEdit_virtualbase_wheelEvent(self: pointer, e: pointer): void{.importc: "QTextEdit_virtualbase_wheelEvent".}
proc fcQTextEdit_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_wheelEvent".}
proc fQTextEdit_virtualbase_createMimeDataFromSelection(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_createMimeDataFromSelection".}
proc fcQTextEdit_override_virtual_createMimeDataFromSelection(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_createMimeDataFromSelection".}
proc fQTextEdit_virtualbase_canInsertFromMimeData(self: pointer, source: pointer): bool{.importc: "QTextEdit_virtualbase_canInsertFromMimeData".}
proc fcQTextEdit_override_virtual_canInsertFromMimeData(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_canInsertFromMimeData".}
proc fQTextEdit_virtualbase_insertFromMimeData(self: pointer, source: pointer): void{.importc: "QTextEdit_virtualbase_insertFromMimeData".}
proc fcQTextEdit_override_virtual_insertFromMimeData(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_insertFromMimeData".}
proc fQTextEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QTextEdit_virtualbase_inputMethodEvent".}
proc fcQTextEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_inputMethodEvent".}
proc fQTextEdit_virtualbase_scrollContentsBy(self: pointer, dx: cint, dy: cint): void{.importc: "QTextEdit_virtualbase_scrollContentsBy".}
proc fcQTextEdit_override_virtual_scrollContentsBy(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_scrollContentsBy".}
proc fQTextEdit_virtualbase_doSetTextCursor(self: pointer, cursor: pointer): void{.importc: "QTextEdit_virtualbase_doSetTextCursor".}
proc fcQTextEdit_override_virtual_doSetTextCursor(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_doSetTextCursor".}
proc fQTextEdit_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_minimumSizeHint".}
proc fcQTextEdit_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_minimumSizeHint".}
proc fQTextEdit_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_sizeHint".}
proc fcQTextEdit_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_sizeHint".}
proc fQTextEdit_virtualbase_setupViewport(self: pointer, viewport: pointer): void{.importc: "QTextEdit_virtualbase_setupViewport".}
proc fcQTextEdit_override_virtual_setupViewport(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_setupViewport".}
proc fQTextEdit_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QTextEdit_virtualbase_eventFilter".}
proc fcQTextEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_eventFilter".}
proc fQTextEdit_virtualbase_viewportEvent(self: pointer, param1: pointer): bool{.importc: "QTextEdit_virtualbase_viewportEvent".}
proc fcQTextEdit_override_virtual_viewportEvent(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_viewportEvent".}
proc fQTextEdit_virtualbase_viewportSizeHint(self: pointer, ): pointer{.importc: "QTextEdit_virtualbase_viewportSizeHint".}
proc fcQTextEdit_override_virtual_viewportSizeHint(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_viewportSizeHint".}
proc fQTextEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QTextEdit_virtualbase_devType".}
proc fcQTextEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_devType".}
proc fQTextEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QTextEdit_virtualbase_setVisible".}
proc fcQTextEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_setVisible".}
proc fQTextEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QTextEdit_virtualbase_heightForWidth".}
proc fcQTextEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QTextEdit_override_virtual_heightForWidth".}
proc fQTextEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QTextEdit_virtualbase_hasHeightForWidth".}
